--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,18 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Floating Model]
+Pos=60,60
+Size=152,261
+Collapsed=0
+
+[Window][Enemy]
+Pos=60,60
+Size=152,140
+Collapsed=0
+
+[Window][Camera]
+Pos=60,60
+Size=96,54
+Collapsed=0
+
