--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="2d\ImGuiManager.cpp" />
     <ClCompile Include="base\DirectXCommon.cpp" />
     <ClCompile Include="base\WinApp.cpp" />
+    <ClCompile Include="Chain.cpp" />
     <ClCompile Include="ClearScene.cpp" />
     <ClCompile Include="Fade.cpp" />
     <ClCompile Include="GameOverScene.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="base\StringUtility.h" />
     <ClInclude Include="base\TextureManager.h" />
     <ClInclude Include="base\WinApp.h" />
+    <ClInclude Include="Chain.h" />
     <ClInclude Include="ClearScene.h" />
     <ClInclude Include="Fade.h" />
     <ClInclude Include="GameOverScene.h" />
