--- a/imgui.ini
+++ b/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Floating Model]
-Pos=60,60
-Size=152,261
+Pos=59,235
+Size=344,267
 Collapsed=0
 
 [Window][Enemy]
-Pos=60,60
-Size=152,140
+Pos=62,60
+Size=403,151
 Collapsed=0
 
 [Window][Camera]
 Pos=60,60
 Size=96,54
+Collapsed=0
+
+[Window][Lock On]
+Pos=60,60
+Size=124,77
 Collapsed=0
 
