--- a/DirectXGame.vcxproj
+++ b/DirectXGame.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="CollisionTypeIdDef.h" />
     <ClInclude Include="Easing.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyStatusConfig.h" />
     <ClInclude Include="Fade.h" />
     <ClInclude Include="FollowCamera.h" />
     <ClInclude Include="GameOverScene.h" />
@@ -179,6 +180,7 @@
     <ClInclude Include="math\Vector4.h" />
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerStatusConfig.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="scene\GameScene.h" />
     <ClInclude Include="ShockWave.h" />
