--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Floating Model]
-Pos=59,235
+Pos=64,250
 Size=344,267
 Collapsed=0
 
 [Window][Enemy]
-Pos=62,60
+Pos=116,58
 Size=414,171
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Lock On]
 Pos=850,332
 Size=198,114
+Collapsed=0
+
+[Window][Chain]
+Pos=624,509
+Size=202,76
 Collapsed=0
 
